[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/tile.gd" id="1_tile"]

[sub_resource type="RectangleShape2D" id="RectShape_1"]
size = Vector2(120, 150)

[node name="Tile" type="Area2D"]
script = ExtResource("1_tile")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectShape_1")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -60.0
offset_top = -75.0
offset_right = 60.0
offset_bottom = 75.0
color = Color(0.94, 0.85, 0.65, 1)

[node name="Label" type="Label" parent="."]
offset_left = -60.0
offset_top = -20.0
offset_right = 60.0
offset_bottom = 20.0
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 32

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
